// --- Arquitetura para App de Controle Financeiro ---

// Definição dos tipos ENUM para garantir a consistência dos dados
enum account_type {
  conta_corrente
  poupanca
  cartao_credito
  dinheiro
  investimento
}

enum transaction_type {
  receita
  despesa
}

Table users {
  id integer [primary key]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  role_id integer [not null, ref: > roles.id]

  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table roles {
  id integer [primary key]
  name varchar(50) [unique, not null]
  description text

  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table accounts {
  id integer [primary key]
  user_id integer [not null, ref: > users.id]
  name varchar(100) [not null]
  type account_type [not null]
  initial_balance decimal(15, 2) [not null, default: 0]

  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  
  // Índice para acelerar a busca de contas por usuário
  indexes {
    user_id
  }
}

Table transactions {
  id integer [primary key]
  user_id integer [not null, ref: > users.id]
  account_id integer [not null, ref: > accounts.id]
  category_id integer [ref: > categories.id]
  description varchar(255) [not null]
  amount decimal(15, 2) [not null]
  type transaction_type [not null]
  transaction_date date [not null]
  is_paid boolean [not null, default: true]

  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  
  // Índices para acelerar as buscas mais comuns em transações
  indexes {
    user_id
    account_id
    category_id
  }
}

Table categories {
  id integer [primary key]
  user_id integer [ref: > users.id] 
  name varchar(100) [not null]

  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  
  // Índice para acelerar a busca de categorias por usuário
  indexes {
    user_id
  }
}
